--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -33,6 +33,9 @@ $color-grey-light-2: #bdbdbd;
 $color-grey-dark-1: #757575;
 $color-grey-dark-2: #616161;
 
+$color-button:hsl(331, 78%, 59%);
+$color-button-dark:hsl(331, 78%, 49%);
+
 
 // FONT VARIABLES
 $font-primary: 'Roboto', sans-serif;
@@ -70,7 +73,7 @@ body {
 
 .container {
     display: grid;
-    grid-template-rows: repeat(5,  minmax(20vh, 1fr) );
+    grid-template-rows: 20vh 20vh 20vh 20vh min-content;
     grid-template-columns: [full-start] minmax(min-content, 1fr) 
     [center-start] repeat(10, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(min-content, 1fr) [full-end];
         // 960 : 16x6rem
