--- a/sass/_section-1.scss
+++ b/sass/_section-1.scss
@@ -3,4 +3,13 @@
     grid-column: center-start / center-end;
    
     display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr));
+   
+    &__btn {
+        justify-self: flex-start;
+        align-self: center;
+        margin-left: 10px;
+        padding-left: 5rem;
+        padding-right: 5rem;
+    }
 }
